# docs/swagger.json
@@ -138,7 +138,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.PermCreateRepSt"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dopTypes.CreateRep"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "id": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -529,7 +541,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.RoleCreateRepSt"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dopTypes.CreateRep"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "id": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -711,7 +735,22 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.UsrListRepSt"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dopTypes.PaginatedListRep"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "results": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/entities.UsrListSt"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -743,7 +782,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.UsrCreateRepSt"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dopTypes.CreateRep"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -854,6 +905,14 @@
         }
     },
     "definitions": {
+        "dopTypes.CreateRep": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "any"
+                }
+            }
+        },
         "dopTypes.ErrRep": {
             "type": "object",
             "properties": {
@@ -868,6 +927,23 @@
                     "additionalProperties": {
                         "type": "string"
                     }
+                }
+            }
+        },
+        "dopTypes.PaginatedListRep": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                },
+                "results": {
+                    "type": "any"
+                },
+                "total_count": {
+                    "type": "integer"
                 }
             }
         },
@@ -918,14 +994,6 @@
                 "dsc": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "entities.PermCreateRepSt": {
-            "type": "object",
-            "properties": {
                 "id": {
                     "type": "string"
                 }
@@ -993,14 +1061,6 @@
                 }
             }
         },
-        "entities.RoleCreateRepSt": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
         "entities.RoleListSt": {
             "type": "object",
             "properties": {
@@ -1063,34 +1123,6 @@
                     "items": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "entities.UsrCreateRepSt": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entities.UsrListRepSt": {
-            "type": "object",
-            "properties": {
-                "page": {
-                    "type": "integer"
-                },
-                "page_size": {
-                    "type": "integer"
-                },
-                "results": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entities.UsrListSt"
-                    }
-                },
-                "total_count": {
-                    "type": "integer"
                 }
             }
         },
